<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_login">New Login</string>
    <string name="login_with_existing_account">Login with existing account</string>
    <string name="second_welcome_str">Hi. Welcome to the shoe store hope you find what you desire here</string>
    <string name="first_welcome_str">Welcome</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_info_str">please follow the instructions on how to use our app. please enjoy : )</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
